--- a/notebooks/phase1_out.ipynb
+++ b/notebooks/phase1_out.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3a8ccc6f",
+   "id": "fec83250",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:49:51.234763Z",
-     "iopub.status.busy": "2025-11-02T19:49:51.234466Z",
-     "iopub.status.idle": "2025-11-02T19:49:51.239160Z",
-     "shell.execute_reply": "2025-11-02T19:49:51.238237Z"
+     "iopub.execute_input": "2025-11-02T20:56:17.308157Z",
+     "iopub.status.busy": "2025-11-02T20:56:17.307623Z",
+     "iopub.status.idle": "2025-11-02T20:56:17.313058Z",
+     "shell.execute_reply": "2025-11-02T20:56:17.312150Z"
     },
     "papermill": {
-     "duration": 0.018249,
-     "end_time": "2025-11-02T19:49:51.242605",
+     "duration": 0.01691,
+     "end_time": "2025-11-02T20:56:17.315585",
      "exception": false,
-     "start_time": "2025-11-02T19:49:51.224356",
+     "start_time": "2025-11-02T20:56:17.298675",
      "status": "completed"
     },
     "tags": [
@@ -35,16 +35,16 @@
    "id": "e29117f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:49:51.260751Z",
-     "iopub.status.busy": "2025-11-02T19:49:51.260316Z",
-     "iopub.status.idle": "2025-11-02T19:49:51.284966Z",
-     "shell.execute_reply": "2025-11-02T19:49:51.284126Z"
+     "iopub.execute_input": "2025-11-02T20:56:17.341660Z",
+     "iopub.status.busy": "2025-11-02T20:56:17.341209Z",
+     "iopub.status.idle": "2025-11-02T20:56:17.355212Z",
+     "shell.execute_reply": "2025-11-02T20:56:17.354386Z"
     },
     "papermill": {
-     "duration": 0.035643,
-     "end_time": "2025-11-02T19:49:51.286343",
+     "duration": 0.023942,
+     "end_time": "2025-11-02T20:56:17.356854",
      "exception": false,
-     "start_time": "2025-11-02T19:49:51.250700",
+     "start_time": "2025-11-02T20:56:17.332912",
      "status": "completed"
     },
     "tags": []
@@ -126,16 +126,16 @@
    "id": "e074c1b7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:49:51.308091Z",
-     "iopub.status.busy": "2025-11-02T19:49:51.307704Z",
-     "iopub.status.idle": "2025-11-02T19:49:54.662665Z",
-     "shell.execute_reply": "2025-11-02T19:49:54.661614Z"
+     "iopub.execute_input": "2025-11-02T20:56:17.378495Z",
+     "iopub.status.busy": "2025-11-02T20:56:17.378033Z",
+     "iopub.status.idle": "2025-11-02T20:56:21.645167Z",
+     "shell.execute_reply": "2025-11-02T20:56:21.644348Z"
     },
     "papermill": {
-     "duration": 3.367986,
-     "end_time": "2025-11-02T19:49:54.664189",
+     "duration": 4.278571,
+     "end_time": "2025-11-02T20:56:21.646536",
      "exception": false,
-     "start_time": "2025-11-02T19:49:51.296203",
+     "start_time": "2025-11-02T20:56:17.367965",
      "status": "completed"
     },
     "tags": []
@@ -191,16 +191,16 @@
    "id": "e509235a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:49:54.683416Z",
-     "iopub.status.busy": "2025-11-02T19:49:54.683019Z",
-     "iopub.status.idle": "2025-11-02T19:49:54.696270Z",
-     "shell.execute_reply": "2025-11-02T19:49:54.695527Z"
+     "iopub.execute_input": "2025-11-02T20:56:21.665723Z",
+     "iopub.status.busy": "2025-11-02T20:56:21.665438Z",
+     "iopub.status.idle": "2025-11-02T20:56:21.678939Z",
+     "shell.execute_reply": "2025-11-02T20:56:21.678163Z"
     },
     "papermill": {
-     "duration": 0.024898,
-     "end_time": "2025-11-02T19:49:54.697680",
+     "duration": 0.025118,
+     "end_time": "2025-11-02T20:56:21.680222",
      "exception": false,
-     "start_time": "2025-11-02T19:49:54.672782",
+     "start_time": "2025-11-02T20:56:21.655104",
      "status": "completed"
     },
     "tags": []
@@ -277,16 +277,16 @@
    "id": "eb42de2c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:49:54.717165Z",
-     "iopub.status.busy": "2025-11-02T19:49:54.716472Z",
-     "iopub.status.idle": "2025-11-02T19:49:54.771579Z",
-     "shell.execute_reply": "2025-11-02T19:49:54.770679Z"
+     "iopub.execute_input": "2025-11-02T20:56:21.702630Z",
+     "iopub.status.busy": "2025-11-02T20:56:21.702196Z",
+     "iopub.status.idle": "2025-11-02T20:56:21.775411Z",
+     "shell.execute_reply": "2025-11-02T20:56:21.774376Z"
     },
     "papermill": {
-     "duration": 0.066816,
-     "end_time": "2025-11-02T19:49:54.773465",
+     "duration": 0.087151,
+     "end_time": "2025-11-02T20:56:21.777018",
      "exception": false,
-     "start_time": "2025-11-02T19:49:54.706649",
+     "start_time": "2025-11-02T20:56:21.689867",
      "status": "completed"
     },
     "tags": []
@@ -425,16 +425,16 @@
    "id": "366997fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:49:54.795317Z",
-     "iopub.status.busy": "2025-11-02T19:49:54.795035Z",
-     "iopub.status.idle": "2025-11-02T19:49:54.815095Z",
-     "shell.execute_reply": "2025-11-02T19:49:54.814308Z"
+     "iopub.execute_input": "2025-11-02T20:56:21.800400Z",
+     "iopub.status.busy": "2025-11-02T20:56:21.800113Z",
+     "iopub.status.idle": "2025-11-02T20:56:21.820103Z",
+     "shell.execute_reply": "2025-11-02T20:56:21.819363Z"
     },
     "papermill": {
-     "duration": 0.032168,
-     "end_time": "2025-11-02T19:49:54.816344",
+     "duration": 0.035196,
+     "end_time": "2025-11-02T20:56:21.821529",
      "exception": false,
-     "start_time": "2025-11-02T19:49:54.784176",
+     "start_time": "2025-11-02T20:56:21.786333",
      "status": "completed"
     },
     "tags": []
@@ -511,16 +511,16 @@
    "id": "95ec9e79",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:49:54.837046Z",
-     "iopub.status.busy": "2025-11-02T19:49:54.836723Z",
-     "iopub.status.idle": "2025-11-02T19:49:54.885269Z",
-     "shell.execute_reply": "2025-11-02T19:49:54.884540Z"
+     "iopub.execute_input": "2025-11-02T20:56:21.844109Z",
+     "iopub.status.busy": "2025-11-02T20:56:21.843670Z",
+     "iopub.status.idle": "2025-11-02T20:56:21.891984Z",
+     "shell.execute_reply": "2025-11-02T20:56:21.891018Z"
     },
     "papermill": {
-     "duration": 0.060202,
-     "end_time": "2025-11-02T19:49:54.886787",
+     "duration": 0.061709,
+     "end_time": "2025-11-02T20:56:21.893741",
      "exception": false,
-     "start_time": "2025-11-02T19:49:54.826585",
+     "start_time": "2025-11-02T20:56:21.832032",
      "status": "completed"
     },
     "tags": []
@@ -532,7 +532,13 @@
      "text": [
       "🔧 DATA PREPROCESSING\n",
       "========================================\n",
-      "📂 Loading intermediate dataset from Cell 3 (raw2.csv)...\n",
+      "📂 Loading intermediate dataset from Cell 3 (raw2.csv)...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "✅ Preprocessing complete!\n",
       "📊 Final shape: (525, 26)\n",
       "💾 Cleaned dataset saved at: F:\\RetailSense_Lite\\data\\processed\\cleaned_data.csv\n"
@@ -599,16 +605,16 @@
    "id": "d8eeb4b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:49:54.909474Z",
-     "iopub.status.busy": "2025-11-02T19:49:54.909205Z",
-     "iopub.status.idle": "2025-11-02T19:49:55.692009Z",
-     "shell.execute_reply": "2025-11-02T19:49:55.690882Z"
+     "iopub.execute_input": "2025-11-02T20:56:21.917331Z",
+     "iopub.status.busy": "2025-11-02T20:56:21.916970Z",
+     "iopub.status.idle": "2025-11-02T20:56:22.675970Z",
+     "shell.execute_reply": "2025-11-02T20:56:22.674733Z"
     },
     "papermill": {
-     "duration": 0.7965,
-     "end_time": "2025-11-02T19:49:55.693824",
+     "duration": 0.773924,
+     "end_time": "2025-11-02T20:56:22.677724",
      "exception": false,
-     "start_time": "2025-11-02T19:49:54.897324",
+     "start_time": "2025-11-02T20:56:21.903800",
      "status": "completed"
     },
     "tags": []
@@ -619,13 +625,7 @@
      "output_type": "stream",
      "text": [
       "📦 INVENTORY ANALYSIS (Phase 1 - Cleaned Data)\n",
-      "==================================================\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "==================================================\n",
       "✅ Loaded cleaned data: F:\\RetailSense_Lite\\data\\processed\\cleaned_data.csv\n",
       "📊 Records: 525, Columns: 26\n",
       "📊 Average Stock on Hand: 330.86 units\n",
@@ -752,16 +752,16 @@
    "id": "e3f12636",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:49:55.716900Z",
-     "iopub.status.busy": "2025-11-02T19:49:55.716615Z",
-     "iopub.status.idle": "2025-11-02T19:49:55.742762Z",
-     "shell.execute_reply": "2025-11-02T19:49:55.741964Z"
+     "iopub.execute_input": "2025-11-02T20:56:22.703080Z",
+     "iopub.status.busy": "2025-11-02T20:56:22.702800Z",
+     "iopub.status.idle": "2025-11-02T20:56:22.730691Z",
+     "shell.execute_reply": "2025-11-02T20:56:22.729944Z"
     },
     "papermill": {
-     "duration": 0.039668,
-     "end_time": "2025-11-02T19:49:55.744143",
+     "duration": 0.044276,
+     "end_time": "2025-11-02T20:56:22.732150",
      "exception": false,
-     "start_time": "2025-11-02T19:49:55.704475",
+     "start_time": "2025-11-02T20:56:22.687874",
      "status": "completed"
     },
     "tags": []
@@ -954,16 +954,16 @@
    "id": "9b58bc29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:49:55.768761Z",
-     "iopub.status.busy": "2025-11-02T19:49:55.768359Z",
-     "iopub.status.idle": "2025-11-02T19:49:56.249555Z",
-     "shell.execute_reply": "2025-11-02T19:49:56.248759Z"
+     "iopub.execute_input": "2025-11-02T20:56:22.757968Z",
+     "iopub.status.busy": "2025-11-02T20:56:22.757419Z",
+     "iopub.status.idle": "2025-11-02T20:56:23.245565Z",
+     "shell.execute_reply": "2025-11-02T20:56:23.244761Z"
     },
     "papermill": {
-     "duration": 0.49631,
-     "end_time": "2025-11-02T19:49:56.251252",
+     "duration": 0.502541,
+     "end_time": "2025-11-02T20:56:23.246992",
      "exception": false,
-     "start_time": "2025-11-02T19:49:55.754942",
+     "start_time": "2025-11-02T20:56:22.744451",
      "status": "completed"
     },
     "tags": []
@@ -1176,8 +1176,8 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 9.639677,
-   "end_time": "2025-11-02T19:49:57.553950",
+   "duration": 10.497733,
+   "end_time": "2025-11-02T20:56:24.596094",
    "environment_variables": {},
    "exception": null,
    "input_path": "F:\\RetailSense_Lite\\notebooks\\phase1_eda.ipynb",
@@ -1186,7 +1186,7 @@
     "INPUT_CSV": "F:\\RetailSense_Lite\\data\\uploaded\\uploaded_data.csv",
     "RETAILSENSE_BASE_DIR": "F:\\RetailSense_Lite"
    },
-   "start_time": "2025-11-02T19:49:47.914273",
+   "start_time": "2025-11-02T20:56:14.098361",
    "version": "2.6.0"
   }
  },
