--- a/notebooks/phase2_out.ipynb
+++ b/notebooks/phase2_out.ipynb
@@ -6,16 +6,16 @@
    "id": "0bb73213",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:05.347988Z",
-     "iopub.status.busy": "2025-11-02T19:50:05.347628Z",
-     "iopub.status.idle": "2025-11-02T19:50:05.360874Z",
-     "shell.execute_reply": "2025-11-02T19:50:05.360201Z"
+     "iopub.execute_input": "2025-11-02T20:56:32.284926Z",
+     "iopub.status.busy": "2025-11-02T20:56:32.284516Z",
+     "iopub.status.idle": "2025-11-02T20:56:32.298725Z",
+     "shell.execute_reply": "2025-11-02T20:56:32.297823Z"
     },
     "papermill": {
-     "duration": 0.028809,
-     "end_time": "2025-11-02T19:50:05.363062",
+     "duration": 0.029207,
+     "end_time": "2025-11-02T20:56:32.301183",
      "exception": false,
-     "start_time": "2025-11-02T19:50:05.334253",
+     "start_time": "2025-11-02T20:56:32.271976",
      "status": "completed"
     },
     "tags": []
@@ -77,16 +77,16 @@
    "id": "37f28ddd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:05.382217Z",
-     "iopub.status.busy": "2025-11-02T19:50:05.381942Z",
-     "iopub.status.idle": "2025-11-02T19:50:09.529673Z",
-     "shell.execute_reply": "2025-11-02T19:50:09.528723Z"
+     "iopub.execute_input": "2025-11-02T20:56:32.321276Z",
+     "iopub.status.busy": "2025-11-02T20:56:32.320965Z",
+     "iopub.status.idle": "2025-11-02T20:56:37.615989Z",
+     "shell.execute_reply": "2025-11-02T20:56:37.615180Z"
     },
     "papermill": {
-     "duration": 4.159492,
-     "end_time": "2025-11-02T19:50:09.531335",
+     "duration": 5.306271,
+     "end_time": "2025-11-02T20:56:37.617488",
      "exception": false,
-     "start_time": "2025-11-02T19:50:05.371843",
+     "start_time": "2025-11-02T20:56:32.311217",
      "status": "completed"
     },
     "tags": []
@@ -107,7 +107,7 @@
       "\n",
       "🚀 RETAILSENSE PHASE 2: FEATURE ENGINEERING & MODELS INITIATED\n",
       "============================================================\n",
-      "📅 Started at: 2025-11-03 01:20:09\n"
+      "📅 Started at: 2025-11-03 02:26:37\n"
      ]
     }
    ],
@@ -173,16 +173,16 @@
    "id": "0c32e7e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:09.552869Z",
-     "iopub.status.busy": "2025-11-02T19:50:09.552395Z",
-     "iopub.status.idle": "2025-11-02T19:50:09.574590Z",
-     "shell.execute_reply": "2025-11-02T19:50:09.573438Z"
+     "iopub.execute_input": "2025-11-02T20:56:37.637099Z",
+     "iopub.status.busy": "2025-11-02T20:56:37.636424Z",
+     "iopub.status.idle": "2025-11-02T20:56:37.657716Z",
+     "shell.execute_reply": "2025-11-02T20:56:37.656993Z"
     },
     "papermill": {
-     "duration": 0.033059,
-     "end_time": "2025-11-02T19:50:09.575941",
+     "duration": 0.03274,
+     "end_time": "2025-11-02T20:56:37.659778",
      "exception": false,
-     "start_time": "2025-11-02T19:50:09.542882",
+     "start_time": "2025-11-02T20:56:37.627038",
      "status": "completed"
     },
     "tags": []
@@ -357,16 +357,16 @@
    "id": "ab54005e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:09.599364Z",
-     "iopub.status.busy": "2025-11-02T19:50:09.598991Z",
-     "iopub.status.idle": "2025-11-02T19:50:09.864687Z",
-     "shell.execute_reply": "2025-11-02T19:50:09.863932Z"
+     "iopub.execute_input": "2025-11-02T20:56:37.679510Z",
+     "iopub.status.busy": "2025-11-02T20:56:37.679239Z",
+     "iopub.status.idle": "2025-11-02T20:56:37.951632Z",
+     "shell.execute_reply": "2025-11-02T20:56:37.950863Z"
     },
     "papermill": {
-     "duration": 0.277485,
-     "end_time": "2025-11-02T19:50:09.866094",
+     "duration": 0.284447,
+     "end_time": "2025-11-02T20:56:37.953085",
      "exception": false,
-     "start_time": "2025-11-02T19:50:09.588609",
+     "start_time": "2025-11-02T20:56:37.668638",
      "status": "completed"
     },
     "tags": []
@@ -395,23 +395,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Created 60 rolling features"
+      "✅ Created 60 rolling features\n",
+      "🔄 Creating price-related features...\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "🔄 Creating price-related features...\n",
       "✅ Created 6 price-related features\n",
-      "🔄 Creating inventory features...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "🔄 Creating inventory features...\n",
       "✅ Created 6 inventory features\n",
       "🔄 Encoding categorical features...\n",
       "✅ Created 6 categorical features\n",
@@ -494,16 +487,16 @@
    "id": "3593d065",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:09.888647Z",
-     "iopub.status.busy": "2025-11-02T19:50:09.888363Z",
-     "iopub.status.idle": "2025-11-02T19:50:11.247850Z",
-     "shell.execute_reply": "2025-11-02T19:50:11.246828Z"
+     "iopub.execute_input": "2025-11-02T20:56:37.976588Z",
+     "iopub.status.busy": "2025-11-02T20:56:37.976070Z",
+     "iopub.status.idle": "2025-11-02T20:56:39.999707Z",
+     "shell.execute_reply": "2025-11-02T20:56:39.998931Z"
     },
     "papermill": {
-     "duration": 1.372035,
-     "end_time": "2025-11-02T19:50:11.249498",
+     "duration": 2.036999,
+     "end_time": "2025-11-02T20:56:40.001159",
      "exception": false,
-     "start_time": "2025-11-02T19:50:09.877463",
+     "start_time": "2025-11-02T20:56:37.964160",
      "status": "completed"
     },
     "tags": []
@@ -525,14 +518,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ ARIMA trained for Apples"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "✅ ARIMA trained for Apples\n",
       "   AIC: 1225.18\n",
       "   Next 4 weeks forecast: [218.13 217.87 217.87 217.87]\n",
       "🔄 Training Prophet Model...\n"
@@ -542,14 +528,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "01:20:10 - cmdstanpy - INFO - Chain [1] start processing\n"
+      "02:26:38 - cmdstanpy - INFO - Chain [1] start processing\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "01:20:10 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "02:26:38 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -640,16 +626,16 @@
    "id": "d65995cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:11.275142Z",
-     "iopub.status.busy": "2025-11-02T19:50:11.274865Z",
-     "iopub.status.idle": "2025-11-02T19:50:14.186076Z",
-     "shell.execute_reply": "2025-11-02T19:50:14.185317Z"
+     "iopub.execute_input": "2025-11-02T20:56:40.026323Z",
+     "iopub.status.busy": "2025-11-02T20:56:40.025555Z",
+     "iopub.status.idle": "2025-11-02T20:56:43.112917Z",
+     "shell.execute_reply": "2025-11-02T20:56:43.112090Z"
     },
     "papermill": {
-     "duration": 2.925896,
-     "end_time": "2025-11-02T19:50:14.187633",
+     "duration": 3.101361,
+     "end_time": "2025-11-02T20:56:43.114597",
      "exception": false,
-     "start_time": "2025-11-02T19:50:11.261737",
+     "start_time": "2025-11-02T20:56:40.013236",
      "status": "completed"
     },
     "tags": []
@@ -779,16 +765,16 @@
    "id": "53d39ac0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:14.232596Z",
-     "iopub.status.busy": "2025-11-02T19:50:14.232146Z",
-     "iopub.status.idle": "2025-11-02T19:50:16.026382Z",
-     "shell.execute_reply": "2025-11-02T19:50:16.025659Z"
+     "iopub.execute_input": "2025-11-02T20:56:43.158279Z",
+     "iopub.status.busy": "2025-11-02T20:56:43.157858Z",
+     "iopub.status.idle": "2025-11-02T20:56:44.936807Z",
+     "shell.execute_reply": "2025-11-02T20:56:44.935920Z"
     },
     "papermill": {
-     "duration": 1.817922,
-     "end_time": "2025-11-02T19:50:16.027791",
+     "duration": 1.801963,
+     "end_time": "2025-11-02T20:56:44.938328",
      "exception": false,
-     "start_time": "2025-11-02T19:50:14.209869",
+     "start_time": "2025-11-02T20:56:43.136365",
      "status": "completed"
     },
     "tags": []
@@ -912,16 +898,16 @@
    "id": "76fdf3a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:16.056074Z",
-     "iopub.status.busy": "2025-11-02T19:50:16.055646Z",
-     "iopub.status.idle": "2025-11-02T19:50:16.638100Z",
-     "shell.execute_reply": "2025-11-02T19:50:16.637352Z"
+     "iopub.execute_input": "2025-11-02T20:56:44.966873Z",
+     "iopub.status.busy": "2025-11-02T20:56:44.966504Z",
+     "iopub.status.idle": "2025-11-02T20:56:45.542626Z",
+     "shell.execute_reply": "2025-11-02T20:56:45.541514Z"
     },
     "papermill": {
-     "duration": 0.598781,
-     "end_time": "2025-11-02T19:50:16.639812",
+     "duration": 0.592517,
+     "end_time": "2025-11-02T20:56:45.544484",
      "exception": false,
-     "start_time": "2025-11-02T19:50:16.041031",
+     "start_time": "2025-11-02T20:56:44.951967",
      "status": "completed"
     },
     "tags": []
@@ -1031,16 +1017,16 @@
    "id": "2ee80b0b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:16.676717Z",
-     "iopub.status.busy": "2025-11-02T19:50:16.676319Z",
-     "iopub.status.idle": "2025-11-02T19:50:16.709850Z",
-     "shell.execute_reply": "2025-11-02T19:50:16.709003Z"
+     "iopub.execute_input": "2025-11-02T20:56:45.573911Z",
+     "iopub.status.busy": "2025-11-02T20:56:45.573625Z",
+     "iopub.status.idle": "2025-11-02T20:56:45.629230Z",
+     "shell.execute_reply": "2025-11-02T20:56:45.628439Z"
     },
     "papermill": {
-     "duration": 0.055582,
-     "end_time": "2025-11-02T19:50:16.711625",
+     "duration": 0.072122,
+     "end_time": "2025-11-02T20:56:45.630791",
      "exception": false,
-     "start_time": "2025-11-02T19:50:16.656043",
+     "start_time": "2025-11-02T20:56:45.558669",
      "status": "completed"
     },
     "tags": []
@@ -1151,16 +1137,16 @@
    "id": "6ad9e16b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:16.762530Z",
-     "iopub.status.busy": "2025-11-02T19:50:16.762096Z",
-     "iopub.status.idle": "2025-11-02T19:50:16.777136Z",
-     "shell.execute_reply": "2025-11-02T19:50:16.776539Z"
+     "iopub.execute_input": "2025-11-02T20:56:45.679653Z",
+     "iopub.status.busy": "2025-11-02T20:56:45.679263Z",
+     "iopub.status.idle": "2025-11-02T20:56:45.693623Z",
+     "shell.execute_reply": "2025-11-02T20:56:45.692699Z"
     },
     "papermill": {
-     "duration": 0.042815,
-     "end_time": "2025-11-02T19:50:16.778838",
+     "duration": 0.040954,
+     "end_time": "2025-11-02T20:56:45.695344",
      "exception": false,
-     "start_time": "2025-11-02T19:50:16.736023",
+     "start_time": "2025-11-02T20:56:45.654390",
      "status": "completed"
     },
     "tags": []
@@ -1301,16 +1287,16 @@
    "id": "a59e9d17",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:16.820669Z",
-     "iopub.status.busy": "2025-11-02T19:50:16.820378Z",
-     "iopub.status.idle": "2025-11-02T19:50:16.829545Z",
-     "shell.execute_reply": "2025-11-02T19:50:16.828748Z"
+     "iopub.execute_input": "2025-11-02T20:56:45.738677Z",
+     "iopub.status.busy": "2025-11-02T20:56:45.738407Z",
+     "iopub.status.idle": "2025-11-02T20:56:45.748199Z",
+     "shell.execute_reply": "2025-11-02T20:56:45.747390Z"
     },
     "papermill": {
-     "duration": 0.026234,
-     "end_time": "2025-11-02T19:50:16.830915",
+     "duration": 0.028521,
+     "end_time": "2025-11-02T20:56:45.749565",
      "exception": false,
-     "start_time": "2025-11-02T19:50:16.804681",
+     "start_time": "2025-11-02T20:56:45.721044",
      "status": "completed"
     },
     "tags": []
@@ -1333,7 +1319,7 @@
       "🎉 ALL VALIDATIONS PASSED! ✅\n",
       "🚀 Ready to proceed to Phase 3: Business Layer & Dashboard\n",
       "------------------------------------------------------------\n",
-      "📅 Validation completed at: 2025-11-03 01:20:16\n",
+      "📅 Validation completed at: 2025-11-03 02:26:45\n",
       "\n"
      ]
     }
@@ -1448,14 +1434,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 15.920272,
-   "end_time": "2025-11-02T19:50:18.153584",
+   "duration": 17.938502,
+   "end_time": "2025-11-02T20:56:47.389022",
    "environment_variables": {},
    "exception": null,
    "input_path": "F:\\RetailSense_Lite\\notebooks\\phase2_core_models.ipynb",
    "output_path": "F:\\RetailSense_Lite\\notebooks\\phase2_out.ipynb",
    "parameters": {},
-   "start_time": "2025-11-02T19:50:02.233312",
+   "start_time": "2025-11-02T20:56:29.450520",
    "version": "2.6.0"
   }
  },
