--- a/notebooks/phase3_out.ipynb
+++ b/notebooks/phase3_out.ipynb
@@ -6,16 +6,16 @@
    "id": "3f4772bc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:25.387782Z",
-     "iopub.status.busy": "2025-11-02T19:50:25.387394Z",
-     "iopub.status.idle": "2025-11-02T19:50:28.344976Z",
-     "shell.execute_reply": "2025-11-02T19:50:28.344161Z"
+     "iopub.execute_input": "2025-11-02T20:56:54.687892Z",
+     "iopub.status.busy": "2025-11-02T20:56:54.687568Z",
+     "iopub.status.idle": "2025-11-02T20:56:57.829520Z",
+     "shell.execute_reply": "2025-11-02T20:56:57.828724Z"
     },
     "papermill": {
-     "duration": 2.972102,
-     "end_time": "2025-11-02T19:50:28.348026",
+     "duration": 3.154999,
+     "end_time": "2025-11-02T20:56:57.831905",
      "exception": false,
-     "start_time": "2025-11-02T19:50:25.375924",
+     "start_time": "2025-11-02T20:56:54.676906",
      "status": "completed"
     },
     "tags": []
@@ -28,7 +28,7 @@
       "🧹 Phase 3 outputs cleared\n",
       "🚀 RETAILSENSE PHASE 3: BUSINESS LAYER & INSIGHTS\n",
       "============================================================\n",
-      "📅 Started: 2025-11-03 01:20:28\n",
+      "📅 Started: 2025-11-03 02:26:57\n",
       "🎯 Goal: Convert ML predictions & anomalies into actionable business insights\n",
       "📂 Processed Data Path: F:\\RetailSense_Lite\\data\\processed\\data_with_all_features.csv\n",
       "📂 Outputs Directory: F:\\RetailSense_Lite\\outputs\n",
@@ -124,16 +124,16 @@
    "id": "39570279",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:28.368777Z",
-     "iopub.status.busy": "2025-11-02T19:50:28.368381Z",
-     "iopub.status.idle": "2025-11-02T19:50:28.397044Z",
-     "shell.execute_reply": "2025-11-02T19:50:28.396217Z"
+     "iopub.execute_input": "2025-11-02T20:56:57.855774Z",
+     "iopub.status.busy": "2025-11-02T20:56:57.855180Z",
+     "iopub.status.idle": "2025-11-02T20:56:57.885492Z",
+     "shell.execute_reply": "2025-11-02T20:56:57.884478Z"
     },
     "papermill": {
-     "duration": 0.040083,
-     "end_time": "2025-11-02T19:50:28.398467",
+     "duration": 0.043965,
+     "end_time": "2025-11-02T20:56:57.887366",
      "exception": false,
-     "start_time": "2025-11-02T19:50:28.358384",
+     "start_time": "2025-11-02T20:56:57.843401",
      "status": "completed"
     },
     "tags": []
@@ -207,16 +207,16 @@
    "id": "e1783feb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:28.416636Z",
-     "iopub.status.busy": "2025-11-02T19:50:28.416360Z",
-     "iopub.status.idle": "2025-11-02T19:50:28.436048Z",
-     "shell.execute_reply": "2025-11-02T19:50:28.435259Z"
+     "iopub.execute_input": "2025-11-02T20:56:57.911001Z",
+     "iopub.status.busy": "2025-11-02T20:56:57.910718Z",
+     "iopub.status.idle": "2025-11-02T20:56:57.931723Z",
+     "shell.execute_reply": "2025-11-02T20:56:57.930904Z"
     },
     "papermill": {
-     "duration": 0.029981,
-     "end_time": "2025-11-02T19:50:28.437514",
+     "duration": 0.033746,
+     "end_time": "2025-11-02T20:56:57.933309",
      "exception": false,
-     "start_time": "2025-11-02T19:50:28.407533",
+     "start_time": "2025-11-02T20:56:57.899563",
      "status": "completed"
     },
     "tags": []
@@ -327,16 +327,16 @@
    "id": "9ba1765f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:28.457830Z",
-     "iopub.status.busy": "2025-11-02T19:50:28.457550Z",
-     "iopub.status.idle": "2025-11-02T19:50:28.477787Z",
-     "shell.execute_reply": "2025-11-02T19:50:28.477007Z"
+     "iopub.execute_input": "2025-11-02T20:56:57.956440Z",
+     "iopub.status.busy": "2025-11-02T20:56:57.956173Z",
+     "iopub.status.idle": "2025-11-02T20:56:57.988382Z",
+     "shell.execute_reply": "2025-11-02T20:56:57.987556Z"
     },
     "papermill": {
-     "duration": 0.031513,
-     "end_time": "2025-11-02T19:50:28.479315",
+     "duration": 0.043568,
+     "end_time": "2025-11-02T20:56:57.989758",
      "exception": false,
-     "start_time": "2025-11-02T19:50:28.447802",
+     "start_time": "2025-11-02T20:56:57.946190",
      "status": "completed"
     },
     "tags": []
@@ -412,16 +412,16 @@
    "id": "895f1e04",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:28.500007Z",
-     "iopub.status.busy": "2025-11-02T19:50:28.499728Z",
-     "iopub.status.idle": "2025-11-02T19:50:28.529868Z",
-     "shell.execute_reply": "2025-11-02T19:50:28.529139Z"
+     "iopub.execute_input": "2025-11-02T20:56:58.015647Z",
+     "iopub.status.busy": "2025-11-02T20:56:58.015257Z",
+     "iopub.status.idle": "2025-11-02T20:56:58.051606Z",
+     "shell.execute_reply": "2025-11-02T20:56:58.050862Z"
     },
     "papermill": {
-     "duration": 0.04287,
-     "end_time": "2025-11-02T19:50:28.531432",
+     "duration": 0.050898,
+     "end_time": "2025-11-02T20:56:58.053157",
      "exception": false,
-     "start_time": "2025-11-02T19:50:28.488562",
+     "start_time": "2025-11-02T20:56:58.002259",
      "status": "completed"
     },
     "tags": []
@@ -434,7 +434,13 @@
       "\n",
       "📊 STEP 5: DETECTING SALES ANOMALIES\n",
       "-------------------------------------------------------\n",
-      "📊 No ML anomaly flags found, using statistical detection...\n",
+      "📊 No ML anomaly flags found, using statistical detection...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "✅ No anomalies detected. Placeholder record created.\n"
      ]
     }
@@ -525,16 +531,16 @@
    "id": "0f72e13a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:28.551049Z",
-     "iopub.status.busy": "2025-11-02T19:50:28.550679Z",
-     "iopub.status.idle": "2025-11-02T19:50:28.567354Z",
-     "shell.execute_reply": "2025-11-02T19:50:28.566610Z"
+     "iopub.execute_input": "2025-11-02T20:56:58.077777Z",
+     "iopub.status.busy": "2025-11-02T20:56:58.077328Z",
+     "iopub.status.idle": "2025-11-02T20:56:58.097933Z",
+     "shell.execute_reply": "2025-11-02T20:56:58.097157Z"
     },
     "papermill": {
-     "duration": 0.028219,
-     "end_time": "2025-11-02T19:50:28.568761",
+     "duration": 0.034286,
+     "end_time": "2025-11-02T20:56:58.099382",
      "exception": false,
-     "start_time": "2025-11-02T19:50:28.540542",
+     "start_time": "2025-11-02T20:56:58.065096",
      "status": "completed"
     },
     "tags": []
@@ -623,16 +629,16 @@
    "id": "863f34ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:28.590782Z",
-     "iopub.status.busy": "2025-11-02T19:50:28.590329Z",
-     "iopub.status.idle": "2025-11-02T19:50:28.607746Z",
-     "shell.execute_reply": "2025-11-02T19:50:28.606946Z"
+     "iopub.execute_input": "2025-11-02T20:56:58.126663Z",
+     "iopub.status.busy": "2025-11-02T20:56:58.126033Z",
+     "iopub.status.idle": "2025-11-02T20:56:58.146663Z",
+     "shell.execute_reply": "2025-11-02T20:56:58.145692Z"
     },
     "papermill": {
-     "duration": 0.030478,
-     "end_time": "2025-11-02T19:50:28.609192",
+     "duration": 0.035147,
+     "end_time": "2025-11-02T20:56:58.148265",
      "exception": false,
-     "start_time": "2025-11-02T19:50:28.578714",
+     "start_time": "2025-11-02T20:56:58.113118",
      "status": "completed"
     },
     "tags": []
@@ -704,16 +710,16 @@
    "id": "45fba3c5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:28.630939Z",
-     "iopub.status.busy": "2025-11-02T19:50:28.630664Z",
-     "iopub.status.idle": "2025-11-02T19:50:29.945043Z",
-     "shell.execute_reply": "2025-11-02T19:50:29.944196Z"
+     "iopub.execute_input": "2025-11-02T20:56:58.173976Z",
+     "iopub.status.busy": "2025-11-02T20:56:58.173550Z",
+     "iopub.status.idle": "2025-11-02T20:56:59.751278Z",
+     "shell.execute_reply": "2025-11-02T20:56:59.750528Z"
     },
     "papermill": {
-     "duration": 1.328104,
-     "end_time": "2025-11-02T19:50:29.946851",
+     "duration": 1.592942,
+     "end_time": "2025-11-02T20:56:59.752732",
      "exception": false,
-     "start_time": "2025-11-02T19:50:28.618747",
+     "start_time": "2025-11-02T20:56:58.159790",
      "status": "completed"
     },
     "tags": []
@@ -828,16 +834,16 @@
    "id": "979d4c19",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:29.970464Z",
-     "iopub.status.busy": "2025-11-02T19:50:29.969978Z",
-     "iopub.status.idle": "2025-11-02T19:50:29.985377Z",
-     "shell.execute_reply": "2025-11-02T19:50:29.984745Z"
+     "iopub.execute_input": "2025-11-02T20:56:59.786675Z",
+     "iopub.status.busy": "2025-11-02T20:56:59.786289Z",
+     "iopub.status.idle": "2025-11-02T20:56:59.802575Z",
+     "shell.execute_reply": "2025-11-02T20:56:59.801671Z"
     },
     "papermill": {
-     "duration": 0.029877,
-     "end_time": "2025-11-02T19:50:29.986845",
+     "duration": 0.036331,
+     "end_time": "2025-11-02T20:56:59.804191",
      "exception": false,
-     "start_time": "2025-11-02T19:50:29.956968",
+     "start_time": "2025-11-02T20:56:59.767860",
      "status": "completed"
     },
     "tags": []
@@ -918,16 +924,16 @@
    "id": "84b27ea8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T19:50:30.012166Z",
-     "iopub.status.busy": "2025-11-02T19:50:30.011756Z",
-     "iopub.status.idle": "2025-11-02T19:50:30.020232Z",
-     "shell.execute_reply": "2025-11-02T19:50:30.019488Z"
+     "iopub.execute_input": "2025-11-02T20:56:59.837363Z",
+     "iopub.status.busy": "2025-11-02T20:56:59.836921Z",
+     "iopub.status.idle": "2025-11-02T20:56:59.848245Z",
+     "shell.execute_reply": "2025-11-02T20:56:59.847674Z"
     },
     "papermill": {
-     "duration": 0.02211,
-     "end_time": "2025-11-02T19:50:30.021490",
+     "duration": 0.032004,
+     "end_time": "2025-11-02T20:56:59.849708",
      "exception": false,
-     "start_time": "2025-11-02T19:50:29.999380",
+     "start_time": "2025-11-02T20:56:59.817704",
      "status": "completed"
     },
     "tags": []
@@ -941,7 +947,7 @@
       "======================================================================\n",
       "🎯 PHASE 3: BUSINESS LAYER & INSIGHTS COMPLETED!\n",
       "======================================================================\n",
-      "📅 Completed: 2025-11-03 01:20:30\n",
+      "📅 Completed: 2025-11-03 02:26:59\n",
       "\n",
       "✅ DELIVERABLES GENERATED (saved in 'F:\\RetailSense_Lite\\outputs'):\n",
       "   📊 Executive Dashboard: F:\\RetailSense_Lite\\outputs\\executive_dashboard.png\n",
@@ -1029,14 +1035,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.818621,
-   "end_time": "2025-11-02T19:50:31.477322",
+   "duration": 8.993489,
+   "end_time": "2025-11-02T20:57:00.975871",
    "environment_variables": {},
    "exception": null,
    "input_path": "F:\\RetailSense_Lite\\notebooks\\phase3.ipynb",
    "output_path": "F:\\RetailSense_Lite\\notebooks\\phase3_out.ipynb",
    "parameters": {},
-   "start_time": "2025-11-02T19:50:22.658701",
+   "start_time": "2025-11-02T20:56:51.982382",
    "version": "2.6.0"
   }
  },
